icy/development/requirement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icy-dev-deployment
  namespace: dev
  labels:
    app: icy-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: icy-dev
  template:
    metadata:
      labels:
        app: icy-dev
    spec:
      containers:
      - name: icy-dev
        image: sprawlers/icy:v1.0
        ports:
        - containerPort: 80
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /
            port: 80
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /
            port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: icy-dev-service
  namespace: dev
spec:
  selector:
    app: icy-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: icy-dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - test.sprawl.team
    secretName: test-tls
  rules:
  - host: test.sprawl.team
    http:
      paths:
      - backend:
          serviceName: icy-dev-service
          servicePort: 80
